# vlc-skip-intro

./: .gitignore  Makefile  README.md  pyproject.toml  scan-dir.sh  setup.py  tmdb-lookup.py
intro-detection/: __init__.py  audio-scan.py  tmdb_lookup.py
vlc-plugin/: README.md  enable_permanent.sh  export_db_cache.py  install_standalone.sh  skip_intro_intf.lua  update_cache.sh
vlc-plugin/test/: test_filename_match.sh  test_hash.lua  test_hash_fixed.lua  test_hash_voyager.lua  test_json_parse.lua  test_vlc_skip.sh
